--- a/news-form.html
+++ b/news-form.html
@@ -31,11 +31,11 @@
             </div>
             <div class="collapse navbar-collapse navbar-menubuilder">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="#">HOME</a>
+                    <li><a href="index.html">HOME</a>
                     </li>
-                    <li><a href="news.html">NEWS</a>
+                    <li class="active"><a href="news.html">NEWS</a>
                     </li>
-                    <li><a href="#">COLLECTIONS</a>
+                    <li><a href="http://collections.readingmuseum.org.uk/">COLLECTIONS</a>
                     </li>
                     <li><a href="contact.html">CONTACT</a>
                     </li>
