--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </li>
                     <li><a href="news.html">NEWS</a>
                     </li>
-                    <li><a href="#">COLLECTIONS</a>
+                    <li><a href="http://collections.readingmuseum.org.uk/">COLLECTIONS</a>
                     </li>
                     <li><a href="contact.html">CONTACT</a>
                     </li>
