--- a/news.html
+++ b/news.html
@@ -35,7 +35,7 @@
                     </li>
                     <li class="active"><a href="#">NEWS</a>
                     </li>
-                    <li><a href="#">COLLECTIONS</a>
+                    <li><a href="http://collections.readingmuseum.org.uk/">COLLECTIONS</a>
                     </li>
                     <li><a href="contact.html">CONTACT</a>
                     </li>
