--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
         <p class="lead center-text text-light">
           Initial appointment (approximately 90 minutes) - £30
           <br>Subsequent appointment (approximately 60 minutes) - £25
+          <br>Find exclusive offers on my <a href="https://www.facebook.com/shawreflexology/">Facebook</a>
         </p>
         <br />
         <br />
