--- a/news-form.html
+++ b/news-form.html
@@ -100,9 +100,9 @@
       </div>
 
       <div class="container">
-        <h1 class="center-text">My Expereince</h1>
+        <h1 class="center-text">My Experience</h1>
         <p class="lead center-text text-light">
-          I trained as a Reflexologist in 1996 at The British School of Reflexolgy .  My tutor was Ann Gillanders who is the Principle and founder.  She was trained under the method of Eunice Ingham the founder of Modern reflexology. Ann and her brother Tony Porter were responsible for the recognition and developement of reflexology in England and continental Europe.  She has written many books on the subject, lectures extensively and has broadcasted both on the tv and radio.
+          I trained as a Reflexologist in 1996 at The British School of Reflexology .  My tutor was Ann Gillanders who is the Principle and founder.  She was trained under the method of Eunice Ingham the founder of Modern reflexology. Ann and her brother Tony Porter were responsible for the recognition and developement of reflexology in England and continental Europe.  She has written many books on the subject, lectures extensively and has broadcasted both on the tv and radio.
         <br>
         <br>
         During my years as a reflexologist I have worked both from home and in Holistic Healing centres.  I have been able to gain a wealth of experience and knowledge during this time and thoroughly enjoy meeting and treating my clients.
