--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="#">HOME</a>
                     </li>
-                    <li><a href="news-form.html">TREATMENT</a>
+                    <li><a href="treatment.html">TREATMENT</a>
                     </li>
                     <li><a href="contact.html">BOOK NOW</a>
                     </li>
