--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html">HOME</a>
                     </li>
-                    <li><a href="news-form.html">TREATMENT</a>
+                    <li><a href="treatment.html">TREATMENT</a>
                     </li>
                     <li class="active"><a href="contact.html">BOOK NOW</a>
                     </li>
@@ -70,25 +70,6 @@
           <a href="mailto:YourName@YourSite.com">sshaw1632@gmail.com</a>
 
         </div>
-      </div>
-
-      <div class="col-xs-12 col-sm-6">
-
-        <form id="contact-form">
-          <div class="form-group">
-            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Name...">
-          </div>
-          <div class="form-group">
-            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email...">
-          </div>
-          <div class="form-group">
-            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Subject...">
-          </div>
-          <div class="form-group">
-            <textarea class="form-control" rows="9" id="comment" placeholder="Message..."></textarea>
-          </div>
-        </form>
-
       </div>
 
 
