--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html">HOME</a>
                     </li>
-                    <li><a href="treatment.html">TREATMENT</a>
+                    <li><a href="news-form.html">TREATMENT</a>
                     </li>
                     <li class="active"><a href="contact.html">BOOK NOW</a>
                     </li>
@@ -48,35 +48,40 @@
         <div class="row">
 
           <h1>Contact</h1>
-          <h4>You can find me at this adress:</h4>
+          <h4>You can find me at this address:</h4>
           <p>
-            16 Manor House
+            50 Grove Park
             <br>
-            Flockton
+            Calder Grove
             <br>
             Wakefield
             <br>
             West York
             <br>
-            WF4 4AN
+            WF4 3BZ
           </p>
           <br>
           <h4>You can contact me on this number:</h4>
           <p>
-            07825201373 (mobile)
+            07825 201373
           </p>
           <br>
           <h4>You can email me or use the form:</h4>
-          <a href="mailto:YourName@YourSite.com">sshaw1632@gmail.com</a>
-
+          <a href="mailto:sshaw1632@gmail.com">sshaw1632@gmail.com</a>
+          <br>
         </div>
       </div>
+
+      <div class="col-xs-12 col-sm-6">
+
+      </div>
+
 
 
       <div class="col-xs-12">
         <div class="row">
           <div class="map">
-            <div style="text-decoration:none; overflow:hidden; height:375px; width:100%;"><div id="embed-map-canvas" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5590.848081371674!2d-1.6344960398819661!3d53.63545131389192!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4879621c096645a5%3A0xe4add21efe501bff!2s16+Manor+House%2C+Flockton%2C+Wakefield+WF4!5e0!3m2!1sen!2suk!4v1474463967641"></iframe></div><a class="embed-map-code" href="https://www.dog-checks.com/miniature-schnauzer-checks" id="make-map-information">mini schnauzer checks</a><style>#embed-map-canvas img{max-width:none!important;background:none!important;}</style></div><script src="https://www.dog-checks.com/google-maps-authorization.js?id=dedb55ef-00ca-c4d9-977a-b6f8f83c1b50&c=embed-map-code&u=1458134955" defer="defer" async="async"></script>
+            <div style="text-decoration:none; overflow:hidden; height:375px; width:100%;"><div id="embed-map-canvas" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2364.9880769317415!2d-1.534064484207027!3d53.647184759835774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487966af3e02b3eb%3A0x74f77782812a8ec0!2s50%20Grove%20Park%2C%20Calder%20Grove%2C%20Wakefield%20WF4%203BZ!5e0!3m2!1sen!2suk!4v1579811622486!5m2!1sen!2suk" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe></div><a class="embed-map-code" href="https://www.dog-checks.com/miniature-schnauzer-checks" id="make-map-information">mini schnauzer checks</a><style>#embed-map-canvas img{max-width:none!important;background:none!important;}</style></div><script src="https://www.dog-checks.com/google-maps-authorization.js?id=dedb55ef-00ca-c4d9-977a-b6f8f83c1b50&c=embed-map-code&u=1458134955" defer="defer" async="async"></script>
           </div>
         </div>
       </div>
