--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="#">HOME</a>
                     </li>
-                    <li><a href="treatment.html">TREATMENT</a>
+                    <li><a href="news-form.html">TREATMENT</a>
                     </li>
                     <li><a href="contact.html">BOOK NOW</a>
                     </li>
@@ -103,9 +103,8 @@
         <br />
         <h1 class="center-text"> Cost: </h1>
         <p class="lead center-text text-light">
-          Initial appointment (approximately 90 minutes) - £30
+          Initial appointment (approximately 75 minutes) - £35
           <br>Subsequent appointment (approximately 60 minutes) - £25
-          <br>Find exclusive offers on my <a href="https://www.facebook.com/shawreflexology/">Facebook</a>
         </p>
         <br />
         <br />
